add update directory enabled
